assets/css/post.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,400;0,800;1,100;1,300;1,400;1,800&display=swap");

:root {
  --gray-1: #3f3f3f;
  --gray-2: #32353a;
  --gray-3: #25282c;
  --gray-4: #151618;
  --gray-5: #151618;
  --gray-6: #111111;
  --white-1: #eeeeee;
  --white-2: #a9abb3;
}
* {
  font-family: inherit;
  text-decoration: none;
  margin: 0;
  padding: 0;
  -webkit-user-drag: none;
  -moz-window-dragging: none;
  -webkit-tap-highlight-color: transparent;
}
* img {
  max-width: 100%;
}
html,
body {
  color: var(--white-2);
  background-color: var(--gray-6);
  font-family: "JetBrains Mono", monospace;
  font-size: 95%;
  line-height: 3rem;
  background-color: var(--gray-5);
}
.content a {
  color: cyan;
  border-bottom: 1px solid cyan;
}
header {
  padding: 2rem 0 4rem 0;
}
.site-title {
  font-size: 1.4rem;
  font-weight: bolder;
  line-height: 110%;
  color: var(--white-2);
}

.sidebar {
  padding: 5rem 0% 4rem 2.5%;
  width: 15%;
  height: 80vh;
  float: left;
  position: sticky;
  top: 0;
  display: flex;
  flex-direction: column;
}

.sidebar .sidebar-content a {
  display: block;
  text-overflow: ellipsis;
  font-style: italic;
  overflow: hidden;
  white-space: pre;
  max-width: 80%;
  padding: 2px 5px;
  color: dimgrey;
  animation: fade-sidebar 0.5s ease-out 0.125s 1 backwards;
}

.sidebar .sidebar-content a:hover {
  font-weight: bold;
}

.content {
  overflow-y: hidden;
  animation: fade-content 0.75s ease-out 0s 1 backwards;
}

@keyframes fade-content {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes fade-sidebar {
  from {
    opacity: 0;
    transform: translateX(-20px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

main {
  margin: 0 auto;
}

@media only screen and (max-width: 1025px) {
  .sidebar {
    display: none;
  }
  main {
    max-width: 650px;
    padding: 3rem 0 4rem 0;
  }
}
@media only screen and (min-width: 1025px) {
  main {
    padding: 3rem 17.5% 4rem 0;
  }
  footer {
    padding: 0 0 0 21.5%;
  }
}

.article {
  margin-bottom: 3rem;
}

.article-header {
  margin-bottom: 4rem;
}
.article-title {
  color: var(--white-1);
  font-size: 2.4rem;
  margin-bottom: 0.6rem;
  line-height: 140%;
}

.article .date {
  display: block;
  font-size: 0.8rem;
  padding: 0 0 1rem 0;
}
.categories {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
}
.categories .category {
  margin: 0 0.5rem 0.6rem 0;
  display: block;
  color: var(--gray-4);
  background: var(--white-2);
  border-radius: 15px;
  font-size: 0.7rem;
  padding: 0.1rem 0.8rem;
  line-height: 1.3rem;
  cursor: pointer;
}

/* markdown content */

.content * {
  line-height: 180%;
}
.content p {
  margin: 0 0 1.75rem 0;
  padding: 0;
}
.content h1 {
  font-size: 2.5rem;
}
.content h2 {
  font-size: 1.8rem;
}
.content h3 {
  font-size: 1.6rem;
}
.content h4 {
  font-size: 1.4rem;
}
.content h5 {
  font-size: 1.2rem;
}
.content h6 {
  font-size: 1rem;
}
.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
  margin: 1.75rem 0;
}
.content h1 > a,
.content h2 > a,
.content h3 > a,
.content h4 > a,
.content h5 > a,
.content h6 > a {
  color: dimgrey;
  border-bottom: 3px solid peru;
}
.content blockquote {
  padding-left: 1.42188rem;
  margin-bottom: 1.75rem;
  font-style: italic;
  font-weight: 100;
  border-left: 0.3rem solid var(--white-2);
}
.content strong {
  font-weight: bold;
}
.content del {
  filter: brightness(0.5);
  text-decoration: line-through;
}
.content ul {
  margin-left: 1rem;
  margin-bottom: 1.75rem;
}
.content ol {
  margin-left: 1.75rem;
  margin-bottom: 1.75rem;
}
.content ol * ol,
.content ul * ul {
  margin-left: 1rem;
  margin-bottom: 0;
}
.content table {
  width: 100%;
  max-width: 100%;
  margin: 1rem 0;
  border-collapse: collapse;
}
.content table th {
  background-color: var(--gray-3);
  color: var(--white-2);
  border: 1px solid var(--gray-5);
}
.content table * {
  border: 1px solid var(--gray-3);
  padding: 0.2rem;
}
.content img {
  max-width: 100%;
  margin: 1rem 0;
}

/* pre , code */
/*.content,*/
.content div,
.content div pre,
.content div pre code {
  overflow-x: auto !important;
}

.content pre {
  background: var(--gray-3) !important;
  padding: 1rem 2rem;
  margin-bottom: 1.75rem;
}

.content code {
  padding: 3px 5px;
  color: var(--white-2);
  /*white-space: break-spaces;
  overflow-wrap: break-word;*/
  white-space: pre;
  overflow-x: auto !important;
  background-color: var(--gray-3);

}

/* lbox */

.content img {
  cursor: zoom-in;
}

#lightbox {
  position: fixed;
  z-index: 1000;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
}

#lightbox.active {
  display: flex;
  justify-content: center;
  align-items: center;
}

#lightbox img {
  max-width: 90%;
  max-height: 80%;
  padding: 4px;
  background-color: black;
  border: 2px solid white;
}

@media screen and (max-width: 750px) {
  body {
    padding: 1.5rem;
  }
}

